<resources>
    <string name="app_name">QxCar</string>
    <!--main tab txt -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_tab_first">轮廓电机</string>
    <string name="main_tab_second">动力电池</string>
    <string name="main_tab_three">车灯车窗</string>
    <string name="main_tab_four">空调设置</string>
    <string name="main_tab_five">音响设置</string>
    <string name="main_tab_six">汽车设置</string>
    <string name="main_tab_seven">一键服务</string>
    <!--index txt -->
    <string name="index_radio_left">手动转向</string>
    <string name="index_radio_right">自动转向</string>
    <string name="index_query_history">记录查询</string>
    <string name="index_txt_control_temperature">制动器温度</string>
    <string name="index_txt_control_tear">制动器磨损</string>
    <string name="index_txt_wheel_height">车轮高度</string>
    <string name="index_txt_wheel_temperature">车轮温度</string>
    <string name="index_txt_slip">转差角误差(%)</string>
    <string name="index_txt_pressure">供气气压(Kpa)</string>
    <string name="index_txt_door_pressure">舱门密封气压(Kpa)</string>
    <string name="index_txt_battery">电池锁紧</string>
    <string name="index_txt_motor">转向电机</string>
    <string name="index_txt_wheel_motor">轮廓电机</string>

    <!--first tab -->
    <string name="first_wheel_speed">转速(rad/min):</string>
    <string name="first_wheel_temperature">温度(°C):</string>
    <string name="first_slip">角度(°):</string>
    <string name="first_power">力矩(N/m):</string>
    <string name="first_feng_pressure">风压(Pa):</string>
    <string name="first_weight">载重量(Kg):</string>
    <string name="first_you_pressure">油压(Pa):</string>

    <!-- second tab-->
    <string name="second_mileage">续航里程(KM):</string>
    <string name="second_battery">电量(%):</string>
    <string name="second_temperature">平均温度(C):</string>
    <string name="second_electric_current">总电流(A):</string>
    <string name="second_trmperature_changer">最大温差(C):</string>
    <string name="second_electric_pressure">总电压(V):</string>
    <string name="secondelectric_pressure_changer">总电压差(V):</string>

    <!-- three tab-->
    <string name="three_front_car_lighting">前车内照明灯</string>
    <string name="three_night_lighting_car">车内夜行照明</string>
    <string name="three_front_battery">前电池照明灯</string>
    <string name="three_right_middle_column_lamp">右中柱照明灯</string>
    <string name="three_right_put_to_the_lamp">右放包照明灯</string>
    
    <string name="three_car_tail_light_logo">车尾LOGO灯</string>
    <string name="three_put_newspaper">放报灯</string>
    <string name="three_rear_battery_lamp">后电池照明灯</string>
    <string name="three_rear_lamp">车内后照明灯</string>
    <string name="three_storage_box">储物箱</string>
    <string name="three_right_box_lamp">右保险箱照明灯</string>
    
    <!-- four tab-->
    <string name="four_inner_loop">内循环</string>
    <string name="four_humidity">湿度</string>
    <string name="four_wind_point">风点</string>
    <string name="four_format">制式</string>
    <string name="four_timing">定时</string>
    <string name="four_wind_velocity">风速</string>
    <string name="four_exterior_windows_sesk">外窗吹风</string>
    <string name="four_in_windows_sesk">内窗吹风</string>

    <!-- five tab-->
    <string name="five_voice_one">第一声源</string>
    <string name="five_voice_two">第二声源</string>
    <string name="five_voice_three">第三声源</string>
    <string name="five_voice_four">第四声源</string>
    
    <!-- six tab -->
    <string name="six_setting_carport">车棚设置</string>
    <string name="six_setting_seat">座椅设置</string>
    <string name="six_setting_supply">供气设置</string>
    <string name="six_setting_light">光线设置</string>

    <string name="six_car_bottom_toast">Tip:绿色线内玻璃是否透明:(白色:透明;灰色:不透明)</string>

    <string name="six_three_one">车架纵梁供气:</string>
    <string name="six_three_two">车门密封供气:</string>
    <string name="six_three_three">电池除尘供气:</string>
    <string name="six_three_four">挡风玻璃供气:</string>
    <string name="six_three_five">外后视镜供气:</string>
    <string name="six_three_six">伦廓转向供气:</string>
    <string name="six_three_seven">车轮制动供气:</string>

    <string name="six_three_open">打开/关闭</string>
    <string name="six_three_close">关闭/打开</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
