<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.zoneol.qxcar.fragment.six.SixFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="horizontal"
       android:background="@color/blank">
       <RelativeLayout
           android:id="@+id/six_left_contain"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="6">

        </RelativeLayout>
       <RelativeLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
                <Button
                    android:id="@+id/six_right_one_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six_setting_carport"
                    android:textSize="15sp"
                    />
                <Button
                    android:id="@+id/six_right_two_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six_setting_seat"
                    android:textSize="15sp"
                    />
                <Button
                    android:id="@+id/six_right_three_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six_setting_supply"
                    android:textSize="15sp"
                    />
                <Button
                    android:id="@+id/six_right_four_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six_setting_light"
                    android:textSize="15sp"
                    />
            </LinearLayout>
       </RelativeLayout>
   </LinearLayout>

</FrameLayout>
