<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.zoneol.qxcar.fragment.six.setting.SixSettingThreeFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:background="@color/blank"
       android:gravity="center">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/six_three_one"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:textSize="16sp"
               />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:text="@string/six_three_close"
               android:textStyle="bold"
               android:layout_marginLeft="10dp"
               />
       </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/six_three_two"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:textSize="16sp"
              />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:text="@string/six_three_close"
               android:textStyle="bold"
               android:layout_marginLeft="10dp"/>
       </LinearLayout>


       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/six_three_three"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:textSize="16sp"
               />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:text="@string/six_three_close"
               android:textStyle="bold"
               android:layout_marginLeft="10dp"/>
       </LinearLayout>


       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/six_three_four"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:textSize="16sp"
               />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:text="@string/six_three_close"
               android:textStyle="bold"
               android:layout_marginLeft="10dp"/>
       </LinearLayout>


       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/six_three_one"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:textSize="16sp"
               />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:text="@string/six_three_close"
               android:textStyle="bold"
               android:layout_marginLeft="10dp"/>
       </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/six_three_one"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:textSize="16sp"
               />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:text="@string/six_three_close"
               android:textStyle="bold"
               android:layout_marginLeft="10dp"/>
       </LinearLayout>


       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/six_three_one"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:textSize="16sp"
               />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:text="@string/six_three_close"
               android:textStyle="bold"
               android:layout_marginLeft="10dp"/>
       </LinearLayout>
   </LinearLayout>

</FrameLayout>
